# etsi_its_messages

.devcontainer/: DockerFile
etsi_its_coding/etsi_its_mcm_thi_prima_coding/: CMakeLists.txt  package.xml
etsi_its_coding/etsi_its_mcm_thi_prima_coding/include/etsi_its_mcm_thi_prima_coding/: ANY.h  BIT_STRING.h  BOOLEAN.h  ENUMERATED.h  GraphicString.h  IA5String.h  INTEGER.h  NativeEnumerated.h  NativeInteger.h  NumericString.h  OBJECT_IDENTIFIER.h  OCTET_STRING.h  OPEN_TYPE.h  ObjectDescriptor.h  UTF8String.h  aper_decoder.h  aper_encoder.h  aper_opentype.h  aper_support.h  asn_AccelerationConfidence.h  asn_AccelerationControl.h  asn_AccidentSubCauseCode.h  asn_ActionID.h  asn_AdverseWeatherCondition-AdhesionSubCauseCode.h  asn_AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  asn_AdverseWeatherCondition-PrecipitationSubCauseCode.h  asn_AdverseWeatherCondition-VisibilitySubCauseCode.h  asn_Altitude.h  asn_AltitudeConfidence.h  asn_AltitudeValue.h  asn_BasicContainer.h  asn_BasicContainerMCM.h  asn_BasicVehicleContainerHighFrequency.h  asn_BasicVehicleContainerLowFrequency.h  asn_CAM.h  asn_CamParameters.h  asn_CauseCode.h  asn_CauseCodeType.h  asn_CenDsrcTollingZone.h  asn_CenDsrcTollingZoneID.h  (+176 more)
etsi_its_coding/etsi_its_mcm_thi_prima_coding/src/: ANY.c  ANY_aper.c  ANY_uper.c  BIT_STRING.c  BIT_STRING_print.c  BIT_STRING_rfill.c  BIT_STRING_uper.c  BOOLEAN.c  BOOLEAN_aper.c  BOOLEAN_print.c  BOOLEAN_rfill.c  BOOLEAN_uper.c  ENUMERATED.c  ENUMERATED_aper.c  ENUMERATED_uper.c  GraphicString.c  IA5String.c  INTEGER.c  INTEGER_aper.c  INTEGER_print.c  INTEGER_rfill.c  INTEGER_uper.c  NativeEnumerated.c  NativeEnumerated_aper.c  NativeEnumerated_uper.c  NativeInteger.c  NativeInteger_aper.c  NativeInteger_print.c  NativeInteger_rfill.c  NativeInteger_uper.c  NumericString.c  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER_print.c  OBJECT_IDENTIFIER_rfill.c  OCTET_STRING.c  OCTET_STRING_aper.c  OCTET_STRING_print.c  OCTET_STRING_rfill.c  OCTET_STRING_uper.c  OPEN_TYPE.c  (+223 more)
etsi_its_conversion/etsi_its_mcm_thi_prima_conversion/: CMakeLists.txt  package.xml
etsi_its_conversion/etsi_its_mcm_thi_prima_conversion/include/: convertAccelerationConfidence.h  convertAccelerationControl.h  convertAccidentSubCauseCode.h  convertActionID.h  convertAdverseWeatherConditionAdhesionSubCauseCode.h  convertAdverseWeatherConditionExtremeWeatherConditionSubCauseCode.h  convertAdverseWeatherConditionPrecipitationSubCauseCode.h  convertAdverseWeatherConditionVisibilitySubCauseCode.h  convertAltitude.h  convertAltitudeConfidence.h  convertAltitudeValue.h  convertBasicContainer.h  convertBasicContainerMCM.h  convertBasicVehicleContainerHighFrequency.h  convertBasicVehicleContainerLowFrequency.h  convertCAM.h  convertCamParameters.h  convertCauseCode.h  convertCauseCodeType.h  convertCenDsrcTollingZone.h  convertCenDsrcTollingZoneID.h  convertClosedLanes.h  convertCollisionRiskSubCauseCode.h  convertCoopAwareness.h  convertCooperationCostTrajectory.h  convertCooperationID.h  convertCooperationTypeMCM.h  convertCurvature.h  convertCurvatureCalculationMode.h  convertCurvatureConfidence.h  convertCurvatureValue.h  convertDangerousEndOfQueueSubCauseCode.h  convertDangerousGoodsBasic.h  convertDangerousGoodsContainer.h  convertDangerousGoodsExtended.h  convertDangerousSituationSubCauseCode.h  convertDeltaAltitude.h  convertDeltaLatitude.h  convertDeltaLongitude.h  convertDeltaReferencePosition.h  (+135 more)
etsi_its_msgs/etsi_its_mcm_thi_prima_msgs/: CMakeLists.txt  package.xml
etsi_its_msgs/etsi_its_mcm_thi_prima_msgs/msg/: AccelerationConfidence.msg  AccelerationControl.msg  AccidentSubCauseCode.msg  ActionID.msg  AdverseWeatherConditionAdhesionSubCauseCode.msg  AdverseWeatherConditionExtremeWeatherConditionSubCauseCode.msg  AdverseWeatherConditionPrecipitationSubCauseCode.msg  AdverseWeatherConditionVisibilitySubCauseCode.msg  Altitude.msg  AltitudeConfidence.msg  AltitudeValue.msg  BasicContainer.msg  BasicContainerMCM.msg  BasicVehicleContainerHighFrequency.msg  BasicVehicleContainerLowFrequency.msg  CAM.msg  CamParameters.msg  CauseCode.msg  CauseCodeType.msg  CenDsrcTollingZone.msg  CenDsrcTollingZoneID.msg  ClosedLanes.msg  CollisionRiskSubCauseCode.msg  CoopAwareness.msg  CooperationCostTrajectory.msg  CooperationID.msg  CooperationTypeMCM.msg  Curvature.msg  CurvatureCalculationMode.msg  CurvatureConfidence.msg  CurvatureValue.msg  DangerousEndOfQueueSubCauseCode.msg  DangerousGoodsBasic.msg  DangerousGoodsContainer.msg  DangerousGoodsExtended.msg  DangerousSituationSubCauseCode.msg  DeltaAltitude.msg  DeltaLatitude.msg  DeltaLongitude.msg  DeltaReferencePosition.msg  (+135 more)
