<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_mcm_thi_prima_conversion</name>
  <version>3.1.0</version>
  <description>Conversion functions for converting ROS messages to and from ASN.1-encoded ETSI ITS MCMs</description>

  <maintainer email="silascorreia.lobo@carissma.eu">Silas Lobo</maintainer>

  <author email="silascorreia.lobo@carissma.eu">Silas Lobo</author>

  <license>MIT</license>

  <depend>etsi_its_mcm_thi_prima_coding</depend>
  <depend>etsi_its_mcm_thi_prima_msgs</depend>
  <depend>etsi_its_primitives_conversion</depend>
  <depend>ros_environment</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
