<?xml version="1.0"?>
<package format="3">

  <name>etsi_its_mcm_thi_prima_msgs</name>
  <version>3.1.0</version>
  <description>ROS messages for ETSI ITS MCM</description>

  <maintainer email="silascorreia.lobo@carissma.eu">Silas Lobo</maintainer>

  <author email="silascorreia.lobo@carissma.eu">Silas Lobo</author>

  <license>MIT</license>

  <depend>ros_environment</depend>
  <depend>std_msgs</depend>

  <!-- ROS 2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- ROS -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
